fixed witespace wrap issue

--- a/ieeeplanner/css/main.css
+++ b/ieeeplanner/css/main.css
@@ -135,6 +135,7 @@ h2 {
     display: none;
 }
 .scroll-items {
+    white-space: normal;
     vertical-align: top;
     display: inline-block;
     width: 70%;
